--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "ts-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "learning ts",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "amir alizade",
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.2.2"
